--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					</div>
 					<div class="work-container col-7" id="work-container-3">
 						<div class="work-item col-6">
-							<a href="html/module.html">
+							<a href="assets/module.html">
 								<h3>Glorybound</h3>
 								<p>
 									<div>
@@ -139,7 +139,7 @@
 							</a>
 						</div>
 						<div class="work-item col-6">
-							<a href="html/module2.html">
+							<a href="assets/module2.html">
 								<h3>UMCPI</h3>
 								<div>
 									<p>Web Development</p>
