--- a/assets/module2.html
+++ b/assets/module2.html
@@ -16,22 +16,40 @@
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Fira+Sans" rel="stylesheet">
+
+	<script>
+		(function(i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r;
+			i[r] = i[r] || function() {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date();
+			a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0];
+			a.async = 1;
+			a.src = g;
+			m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+		ga('create', 'UA-92391322-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+
 </head>
 
 <body>
 	<div class="module-content container">
 		<div class="module-desc">
-				<div class="close-module">
-					<a href="../index.html">
+			<div class="close-module">
+				<a href="../index.html">
 						&#x2190 Back
 					</a>
-				</div>
+			</div>
 			<h2>
 					UMCPI
 				</h2>
-				<p>
-					Web Development
-				</p>
+			<p>
+				Web Development
+			</p>
 			<p>
 				Developed the front end for UMCPI. A non profit offering training and consulting services to public safety agencies.
 			</p>
