--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Phongxai Vang</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Phongxai Vang, Web Designer and Front end developer."/>
 
 	<!-- CSS Stylesheets -->
 	<link rel="stylesheet" href="css/normalize.css">
