--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
 							</a>
 						</div>
 						<div class="work-item col-6">
-							<a href="">
+							<!-- <a href="">
 								<h3>Vanguard Tech</h3>
 								<div>
 									<p>Web Design and Development</p>
-								</div>
+								</div> -->
 							</a>
 						</div>
 						<div class="work-item col-6">
