--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Phongxai Vang, Web Designer and Front end developer."/>
 
+	<link rel="icon" href="img/favicon.jpg">
+
+
 	<!-- CSS Stylesheets -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
