Index Quick Fix

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<div>
 					<h1>
 								Hello, my name is <span>Phongxai Vang</span>.
-								Front-end developer and self-proclaimed ramen connoisseur based in Minneapolis.
+								Front-end developer based in Minneapolis.
 						</h1>
 				</div>
 			</div>
