--- a/redesign/index.html
+++ b/redesign/index.html
@@ -39,9 +39,14 @@
       <div class="hero-inner">
         <div class="hero-intro">
           <div class="hero-intro-info">
-            <h1>
+            <h1 class="desk-hero-intro">
               <div>Hello, My Name is <span>Phongxai Vang</span></div>
+              <!-- <hr> -->
               <div>Front-End Developer based in Minneapolis</div>
+            </h1>
+            <h1 class="mobile-hero-intro">
+              <div>Phongxai Vang</div>
+              <div>Front-End Developer</div>
             </h1>
             <h2>
               <p class="">
@@ -67,12 +72,13 @@
           <div class="card-image">
             <img src="img/image.jpg" alt="">
           </div>
-        </a>
-      </div>
-      <div class="card">
-        <a href="">
-          <div class="card-image">
-            <img src="img/019.MacBook Pro 13in@2x.png" alt="">
+          <div class="card-info">
+            <span>
+              App Design and Prototype
+            </span>
+            <h3>
+              Vanguard Tech
+            </h3>
           </div>
         </a>
       </div>
@@ -80,6 +86,29 @@
         <a href="">
           <div class="card-image">
             <img src="img/019.MacBook Pro 13in@2x.png" alt="">
+          </div>
+          <div class="card-info">
+            <span>
+              Web Design and Development
+            </span>
+            <h3>
+              Glorybound
+            </h3>
+          </div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="">
+          <div class="card-image">
+            <img src="img/umcpi-iphone.png" alt="">
+          </div>
+          <div class="card-info">
+            <span>
+              App Design and Prototype
+            </span>
+            <h3>
+              Vanguard Tech
+            </h3>
           </div>
         </a>
       </div>
@@ -87,6 +116,14 @@
         <a href="">
           <div class="card-image">
             <img src="img/image.jpg" alt="">
+          </div>
+          <div class="card-info">
+            <span>
+              Web Design and Development
+            </span>
+            <h3>
+              Glorybound
+            </h3>
           </div>
         </a>
       </div>
