--- a/redesign/index.html
+++ b/redesign/index.html
@@ -24,13 +24,13 @@
   <section class="cd-intro">
     <header>
       <div class="nav-bar">
-        <!-- <div class="logo">
+         <div class="logo">
           <span>Phongxai Vang</span>
-        </div> -->
+        </div> 
         <nav class="main-nav">
           <ul>
-            <li><a href="">WORK</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a id="work" href="">work</a></li>
+            <li><a id="contact" href="">contact</a></li>
           </ul>
         </nav>
       </div>
@@ -40,11 +40,6 @@
         <div class="hero-intro">
           <div class="hero-intro-info">
             <h1 class="desk-hero-intro">
-              <div>Hello, My Name is <span>Phongxai Vang</span></div>
-              <!-- <hr> -->
-              <div>Front-End Developer based in Minneapolis</div>
-            </h1>
-            <h1 class="mobile-hero-intro">
               <div>Phongxai Vang</div>
               <div>Front-End Developer</div>
             </h1>
@@ -55,78 +50,64 @@
             </h2>
           </div>
         </div>
-        <a href="" class="nav-button">
+        <a id="work" href="" class="nav-button">
           <div class="mouse-wrap">
             <div class="mouse">
               <div class="scroller"></div>
             </div>
           </div>
         </a>
+        <!-- <div class="hero-image">
+          <img src="img/abstract texture 8.png" alt="">
+        </div> -->
       </div>
     </div>
   </section>
   <div class="main-content">
-    <div class="container">
+    <div class="container" id="workSection">
       <div class="card">
-        <a href="">
-          <div class="card-image">
-            <img src="img/image.jpg" alt="">
-          </div>
-          <div class="card-info">
-            <span>
+        <div class="card-image">
+          <img src="img/image.jpg" alt="">
+        </div>
+        <div class="card-info">
+          <span>
               App Design and Prototype
             </span>
-            <h3>
+          <h3>
               Vanguard Tech
             </h3>
-          </div>
-        </a>
+        </div>
+        <a class="card-hover" href="vanguardtech.html"></a>
       </div>
       <div class="card">
-        <a href="">
-          <div class="card-image">
-            <img src="img/019.MacBook Pro 13in@2x.png" alt="">
-          </div>
-          <div class="card-info">
-            <span>
+        <div class="card-image">
+          <img src="img/019.MacBook Pro 13in@2x.png" alt="">
+        </div>
+        <div class="card-info">
+          <span>
               Web Design and Development
             </span>
-            <h3>
+          <h3>
               Glorybound
             </h3>
-          </div>
-        </a>
+        </div>
+        <a class="card-hover" href="glorybound.html"></a>
       </div>
       <div class="card">
-        <a href="">
-          <div class="card-image">
-            <img src="img/umcpi-iphone.png" alt="">
-          </div>
-          <div class="card-info">
-            <span>
+        <div class="card-image">
+          <img src="img/umcpi-iphone.png" alt="">
+        </div>
+        <div class="card-info">
+          <span>
               App Design and Prototype
             </span>
-            <h3>
-              Vanguard Tech
+          <h3>
+              UMCPI
             </h3>
-          </div>
-        </a>
+        </div>
+        <a class="card-hover" href="umcpi.html"></a>
       </div>
-      <div class="card">
-        <a href="">
-          <div class="card-image">
-            <img src="img/image.jpg" alt="">
-          </div>
-          <div class="card-info">
-            <span>
-              Web Design and Development
-            </span>
-            <h3>
-              Glorybound
-            </h3>
-          </div>
-        </a>
-      </div>
+
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
