--- a/redesign/glorybound.html
+++ b/redesign/glorybound.html
@@ -26,7 +26,7 @@
     <header>
       <div class="nav-bar">
          <div class="logo">
-          <span>Phongxai Vang</span>
+          <!-- <span>Phongxai Vang</span> -->
         </div> 
         <nav class="main-nav">
           <ul>
