--- a/redesign/vanguardtech.html
+++ b/redesign/vanguardtech.html
@@ -26,17 +26,23 @@
     <header>
       <div class="nav-bar">
          <div class="logo">
-          <span>Phongxai Vang</span>
+          <!-- <span>Phongxai Vang</span> -->
         </div> 
         <nav class="main-nav">
           <ul>
-            <li><a id="work" href="index.html">back</a></li>
+            <li><a href="index.html">back</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <div class="project-container">
       <div class="project-content">
+          <span class="title-line">
+              
+            </span>
+            <span class="title-desc">
+              Project
+            </span>
         <h1>
           <div class="project-title">
             Vanguard tech
