--- a/redesign/index.html
+++ b/redesign/index.html
@@ -10,6 +10,9 @@
   <!-- Normalize CSS HTML5 Reset -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 
+  <!-- Animate CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
   <!-- styles.css Link -->
   <link rel="stylesheet" href="css/style.css">
 
@@ -25,9 +28,9 @@
     <header>
       <div class="nav-bar">
          <div class="logo">
-          <span>Phongxai Vang</span>
+          <!-- <span>Phongxai Vang</span> -->
         </div> 
-        <nav class="main-nav">
+        <nav class="main-nav" id="index-nav">
           <ul>
             <li><a id="work" href="">work</a></li>
             <li><a id="contact" href="">contact</a></li>
@@ -39,11 +42,17 @@
       <div class="hero-inner">
         <div class="hero-intro">
           <div class="hero-intro-info">
-            <h1 class="desk-hero-intro">
-              <div>Phongxai Vang</div>
-              <div>Front-End Developer</div>
+            <span class="title-line animated fadeInLeft">
+              
+            </span>
+            <span class="title-desc animated fadeInLeft">
+              hello
+            </span>
+            <h1 class="desk-hero-intro animated fadeInUp">
+              <div >Phongxai Vang</div>
+              <div class="animated fadeInUp">Front-End Developer</div>
             </h1>
-            <h2>
+            <h2 class="animated fadeInUp">
               <p class="">
                 Passionate about technology and exploring the vast space of Front End and Design
               </p>
