--- a/redesign/umcpi.html
+++ b/redesign/umcpi.html
@@ -26,7 +26,7 @@
     <header>
       <div class="nav-bar">
          <div class="logo">
-          <span>Phongxai Vang</span>
+          <!-- <span>Phongxai Vang</span> -->
         </div> 
         <nav class="main-nav">
           <ul>
@@ -37,6 +37,12 @@
     </header>
     <div class="project-container">
       <div class="project-content">
+          <span class="title-line">
+              
+            </span>
+            <span class="title-desc">
+              Project
+            </span>
         <h1>
           <div class="project-title">
             UMCPI
@@ -46,12 +52,12 @@
           <ul>
               <li>
                   <span>
-                    Web Design at ADG
+                    Web Design @ ADG
                   </span>
                 </li>
             <li>
               <span>
-                  Front End Development at ADG                
+                  Front End Development @ ADG                
               </span>
             </li>
           </ul>
@@ -59,7 +65,7 @@
         <div class="w-section">
           <div class="project-description" id="project-description1">
             <p>
-              UMCPI, a non profit that offers training and consulting to public safety agencies, needed a revamp on their website.
+              UMCPI, a non profit that offers training and consulting to public safety agencies, needed a website redesign because their old site was outdated.
             </p>
           </div>
           <div class="project-description">
