--- a/glorybound.html
+++ b/glorybound.html
@@ -30,7 +30,7 @@
         </div> 
         <nav class="main-nav">
           <ul>
-            <li><a href="index.html">back</a></li>
+            <li><a id="work" href="index.html">back</a></li>
           </ul>
         </nav>
       </div>
@@ -45,47 +45,41 @@
             </span>
         <h1>
           <div class="project-title">
-            Vanguard tech
+            Glorybound MN
           </div>
         </h1>
         <div class="project-info">
           <ul>
             <li>
               <span>
-                  App Design
+                Design at ADG
               </span>
-            </li>
+              </li>
             <li>
               <span>
-                  Prototype                  
-              </span>                
+                  Front End Development at ADG                  
+              </span>
             </li>
           </ul>
         </div>
         <div class="w-section">
-            <div class="project-description" id="project-description1">
-                <p>
-                  I was asked to help the Junior Acheivement Program at Edison High School create a design for their app Vanguard tech. The app offers a platform for students to earn rewards with the goal of increasing student engagement and motivation. 
-                </p>
-              </div>
-              <div class="project-description">
-                <p>
-                  Working with students from Edison, I came up with a sleek and minimal interface with emphasis on ease of use for both student and teacher. Due to time contraints, a volunteer developer decided to not move forward with the app, so I decided to create a <a href="https://phongxai2.github.io/prototype/student.html">prototype</a> website for the students to test and present.
-                </p>
-              </div>
+          <div class="project-description" id="project-description1">
+            <p>
+              Website redesign for Glorybound, a non profit family restoration center that helps families of men and women who are struggling with alcohol and substance abuse based in Minneapolis, MN. Their previous website was outdated, so I was asked to redesign and develop their new site.
+            </p>
+          </div>
+          <div class="project-description">
+            <p>
+              The newly revamped website is clean and minimal providing a better experience for users and a color scheme that would better portray Glorybound's organization. Powered by WordPress and built with custom HTML, CSS, and JQUERY.
+            </p>
+          </div>
         </div>
         <div class="w-section">
-            <div class="project-image">
-                <div class="img-container">
-                  <img src="app/iPhone 67 – 11.png" alt="">
-                </div>
-                <div class="img-container">
-                    <img src="app/iPhone 67 – 12.png" alt="">                    
-                </div>
-                <div class="img-container">
-                    <img src="app/iPhone 67 – 13.png" alt="">                    
-                </div>
-              </div>
+          <div class="project-image-center">
+            <div class="img-container">
+                <img src="img/glorybound2.png" alt="">                
+            </div>
+          </div>
         </div>
       </div>
     </div>
