--- a/index.html
+++ b/index.html
@@ -2,23 +2,31 @@
 <html lang="en">
 
 <head>
-	<!-- Meta Tags -->
-	<title>Phongxai Vang</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Phongxai Vang, Web Designer and Front end developer."/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Phongxai Vang, Web Designer and Front end developer."/>
+  <title>Phongxai Vang</title>
+  
+  <link rel="icon" href="img/favicon.jpg">
 
-	<link rel="icon" href="img/favicon.jpg">
+  <!-- Normalize CSS HTML5 Reset -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 
+  <!-- Animate CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
-	<!-- CSS Stylesheets -->
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+  <!-- styles.css Link -->
+  <link rel="stylesheet" href="css/style.css">
 
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Fira+Sans" rel="stylesheet">
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900|Playfair+Display:400,700,900|Lato" rel="stylesheet">
 
-	<script>
+  <!-- modernizr -->
+  <script src="js/modernizr-2.8.3.min.js"></script>
+  
+  <!-- Google Analytics -->
+  <script>
 		(function(i, s, o, g, r, a, m) {
 			i['GoogleAnalyticsObject'] = r;
 			i[r] = i[r] || function() {
@@ -34,199 +42,105 @@
 		ga('create', 'UA-92391322-1', 'auto');
 		ga('send', 'pageview');
 	</script>
-
 </head>
 
 <body>
-	<header>
-		<div class="container">
-			<nav class="main-nav" id="nav-1">
-				<ul>
-					<li><a class="page-scroll" id="work" href="#workSection">Work</a></li>
-				</ul>
-			</nav>
-			<div id="logo-container">
-				<a href="index.html">
-					<div id="logo">
-						<div>PXV</div>
-						<div id="logo-text">Developer</div>
-						<div id="logo-text">/Designer</div>
-					</div>
-				</a>
-			</div>
-			<nav class="main-nav" id="mobile-nav">
-				<a href="#nav">
-					<div id="mobile-button">
-						<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;" xml:space="preserve">
-						<g>
-							<g>
-								<rect class="fill" y="7" width="40" height="2"/>
-								<rect class="fill" y="19" width="40" height="2"/>
-								<rect class="fill" y="31" width="40" height="2"/>
-							</g>
-						</g>
-						</svg>
-					</div>
-				</a>
-			</nav>
-			<nav class="main-nav" id="nav-2">
-				<ul>
-					<li><a id="work" href="#workSection">Work</a></li>
-					<li><a id="about" href="#aboutSection">About</a></li>
-					<li><a id="contact" href="contactSection">Contact</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-	<!--End of Header-->
-	<nav id="nav">
-		<ul>
-			<li><a id="work" href="#workSection">Work</a></li>
-			<li><a id="about" href="#aboutSection">About</a></li>
-			<li><a id="contact" href="#contactSection">Contact</a></li>
-		</ul>
-	</nav>
-	<!-- Start Main Body -->
-	<div class="main-content">
-		<div class="position">
-			<div id="banner" class="container col-12">
-				<div>
-					<h1>
-								Hello, my name is <span>Phongxai Vang</span>.
-								Front-end developer based in Minneapolis.
-						</h1>
-				</div>
-			</div>
-		</div>
-		<!-- Start About Section -->
-		<div id="aboutSection" class="col-12">
-			<div class="position col-12">
-				<div id="aboutModule">
-					<div id="about-img">
-						<img src="img/code.jpg" alt="">
-					</div>
-					<div id="about-info">
-						<div class="">
-							<h2>
-								<div>About</div>
-								<div>Me.</div>
-							</h2>
-							<p>
-								Hi, my name is Phongxai Vang. I majored in Computer Science at the University of St. Thomas.
-							</p>
-							<p>My passion is to create aesthetic websites and explore the vast ecosystem of Front end development and UI/UX design.</p>
-							<p>Outside of web, I enjoy photography and reading about the latest cutting edge technology.</p>
-						</div>
-					</div>
-				</div>
-				<div class="bg">
-				</div>
-			</div>
-		</div>
-		<!-- End About Section -->
-		<!-- Start Work Section -->
-		<div id="workSection" class="col-12">
-			<div class="container">
-				<div class="position clearfix">
-					<div class="work-container col-12" id="work-container-1">
-						<h2>
-							<div>
-							<span>
-									My
-							</span>
-							</div>
-							<div>
-								<span>
-									Work.
-								</span>
-							</div>
-						</h2>
-					</div>
-					<div class="work-container work-desc col-5" id="work-container-2">
-						<p>
-							I love to help businesses, organisations and individuals design and develop their dream website. Take a look at some of the work that I have done.
-						</p>
-					</div>
-					<div class="work-container col-7" id="work-container-3">
-						<div class="work-item col-6">
-							<a href="assets/module.html">
-								<h3>Glorybound</h3>
-								<p>
-									<div>
-										<p>
-											Web Design and Development
-										</p>
-									</div>
-								</p>
-							</a>
-						</div>
-						<div class="work-item col-6">
-							<a href="assets/module2.html">
-								<h3>UMCPI</h3>
-								<div>
-									<p>Web Development</p>
-								</div>
-							</a>
-						</div>
-						<!-- <div class="work-item col-6">
-						</div>
-						<div class="work-item col-6">
-						</div> -->
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End Work Section -->
-		<!-- Start Contact Section -->
-		<div id="contactSection" class="col-12">
-			<div class="container">
-				<div class="position clearfix">
-					<div class="contact-container col-12" id="contact-container-1">
-						<h2>
-							<div>
-							<span>
-									Contact
-							</span>
-							</div>
-							<div>
-								<span>
-									Me.
-								</span>
-							</div>
-						</h2>
-					</div>
-					<div class="contact-container contact-desc col-5">
-						<p>
-							Want to get in touch? Feel free to leave me a message.
-						</p>
-					</div>
-					<div class="contact-container col-7" id="contact-container-4">
-						<div class="form-container">
-							<form action="contact.php">
-								<div>
-									<input id="fName" type="text" placeholder="Your Name" required>
-								</div>
-								<div>
-									<input id="fEmail" type="text" placeholder="Your Email" required>
-								</div>
-								<div>
-									<input id="fMessage" type="text" placeholder="Your Message" required>
-								</div>
-								<button><a href="">Submit</a></button>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<footer id="footer">
-			<div>© 2017 Phongxai Vang</div>
-		</footer>
-	</div>
-	<!-- End of Main Content -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="js/script.js"></script>
-	<script type="text/javascript" src="js/readable.js"></script>
+  <section class="cd-intro">
+    <header>
+      <div class="nav-bar">
+         <div class="logo">
+          <!-- <span>Phongxai Vang</span> -->
+        </div> 
+        <nav class="main-nav" id="index-nav">
+          <ul>
+            <li><a id="work" href="">work</a></li>
+            <li><a id="contact" href="">contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="hero">
+      <div class="hero-inner">
+        <div class="hero-intro">
+          <div class="hero-intro-info">
+            <span class="title-line animated fadeInLeft"></span>
+            <span class="title-desc animated fadeInLeft">
+              hello
+            </span>
+            <h1 class="desk-hero-intro animated fadeInUp">
+              <div >Phongxai Vang</div>
+              <div class="animated fadeInUp">Front-End Developer</div>
+            </h1>
+            <h2 class="animated fadeInUp">
+              <p class="">
+                Passionate about technology and exploring the vast space of Front End and Design
+              </p>
+            </h2>
+          </div>
+        </div>
+        <a id="work" href="" class="nav-button">
+          <div class="mouse-wrap">
+            <div class="mouse">
+              <div class="scroller"></div>
+            </div>
+          </div>
+        </a>
+        <!-- <div class="hero-image">
+          <img src="img/abstract texture 8.png" alt="">
+        </div> -->
+      </div>
+    </div>
+  </section>
+  <div class="main-content">
+    <div class="container" id="workSection">
+      <div class="card">
+        <div class="card-image">
+          <img src="img/image.jpg" alt="">
+        </div>
+        <div class="card-info">
+          <span>
+              App Design and Prototype
+            </span>
+          <h3>
+              Vanguard Tech
+            </h3>
+        </div>
+        <a class="card-hover" href="vanguardtech.html"></a>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="img/019.MacBook Pro 13in@2x.png" alt="">
+        </div>
+        <div class="card-info">
+          <span>
+              Web Design and Development
+            </span>
+          <h3>
+              Glorybound
+            </h3>
+        </div>
+        <a class="card-hover" href="glorybound.html"></a>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="img/umcpi-iphone.png" alt="">
+        </div>
+        <div class="card-info">
+          <span>
+              App Design and Prototype
+            </span>
+          <h3>
+              UMCPI
+            </h3>
+        </div>
+        <a class="card-hover" href="umcpi.html"></a>
+      </div>
+
+    </div>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
