--- a/umcpi.html
+++ b/umcpi.html
@@ -37,21 +37,25 @@
     </header>
     <div class="project-container">
       <div class="project-content">
+        <span class="title-line"></span>
+        <span class="title-desc">
+          Project
+        </span>
         <h1>
           <div class="project-title">
-            Glorybound
+            UMCPI
           </div>
         </h1>
         <div class="project-info">
           <ul>
+              <li>
+                  <span>
+                    Web Design @ ADG
+                  </span>
+                </li>
             <li>
               <span>
-                Design at ADG
-              </span>
-              </li>
-            <li>
-              <span>
-                  Front End Development at ADG                  
+                  Front End Development @ ADG                
               </span>
             </li>
           </ul>
@@ -59,28 +63,21 @@
         <div class="w-section">
           <div class="project-description" id="project-description1">
             <p>
-              Website redesign for Glorybound, a non profit family restoration center that helps families of men and women who are struggling with alcohol and substance abuse based in Minneapolis, MN. Their previous website was outdated, so I was asked to redesign and develop their new site.
+              UMCPI, a non profit that offers training and consulting to public safety agencies, needed a website redesign because their old site was outdated.
             </p>
           </div>
           <div class="project-description">
             <p>
-              The newly revamped website is clean and minimal providing a better experience for users and a color scheme that would better portray Glorybound's organization. Powered by WordPress and built with custom HTML, CSS, and JQUERY.
+              The new website was built with mobile first in mind. Using CSS media queries, the website is fully responsive and looks great both on desktop and mobile. The website was built with wordpress for ease of updates without a developer.
             </p>
           </div>
         </div>
-        <div class="w-section">
-          <div class="project-image">
+        <div class="w-section"></div>
+          <div class="project-image-center">
             <div class="img-container">
-              <img src="app/iPhone 67 – 12.png" alt="">
-            </div>
-            <div class="img-container">
-              <img src="app/iPhone 67 – 12.png" alt="">
-            </div>
-            <div class="img-container">
-              <img src="app/iPhone 67 – 12.png" alt="">
+                <img src="img/umcpi2.png" alt="">                
             </div>
           </div>
-        </div>
       </div>
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
