--- a/vanguardtech.html
+++ b/vanguardtech.html
@@ -30,7 +30,7 @@
         </div> 
         <nav class="main-nav">
           <ul>
-            <li><a id="work" href="index.html">back</a></li>
+            <li><a href="index.html">back</a></li>
           </ul>
         </nav>
       </div>
@@ -45,39 +45,48 @@
             </span>
         <h1>
           <div class="project-title">
-            UMCPI
+            Vanguard tech
           </div>
         </h1>
         <div class="project-info">
           <ul>
-              <li>
-                  <span>
-                    Web Design @ ADG
-                  </span>
-                </li>
             <li>
               <span>
-                  Front End Development @ ADG                
+                  App Design
               </span>
+            </li>
+            <li>
+              <span>
+                  Prototype                  
+              </span>                
             </li>
           </ul>
         </div>
         <div class="w-section">
-          <div class="project-description" id="project-description1">
-            <p>
-              UMCPI, a non profit that offers training and consulting to public safety agencies, needed a website redesign because their old site was outdated.
-            </p>
-          </div>
-          <div class="project-description">
-            <p>
-              The new website is 
-            </p>
-          </div>
+            <div class="project-description" id="project-description1">
+                <p>
+                  I was asked to help the Junior Acheivement Program at Edison High School create a design for their app Vanguard tech. The app offers a platform for students to earn rewards with the goal of increasing student engagement and motivation. 
+                </p>
+              </div>
+              <div class="project-description">
+                <p>
+                  Working with students from Edison, I came up with a sleek and minimal interface with emphasis on ease of use for both student and teacher. I also created a <a href="https://phongxai2.github.io/prototype/student.html">prototype</a> website for the students to test and present.
+                </p>
+              </div>
         </div>
-        <div class="w-section"></div>
-          <div class="project-image">
-            
-          </div>
+        <div class="w-section">
+            <div class="project-image">
+                <div class="img-container">
+                  <img src="app/iPhone 67 – 11.png" alt="">
+                </div>
+                <div class="img-container">
+                    <img src="app/iPhone 67 – 12.png" alt="">                    
+                </div>
+                <div class="img-container">
+                    <img src="app/iPhone 67 – 13.png" alt="">                    
+                </div>
+              </div>
+        </div>
       </div>
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
