--- a/redesign/index.html
+++ b/redesign/index.html
@@ -2,252 +2,228 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Phongxai Vang</title>
+	<!-- Meta Tags -->
+	<title>Phongxai Vang</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<link rel="icon" href="img/favicon.jpg">
 
-    <!-- Normalize CSS HTML5 Reset -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+	<!-- CSS Stylesheets -->
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 
-    <!-- styles.css Link -->
-    <link rel="stylesheet" href="css/style.css">
-
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900|Playfair+Display:400,700,900|Lato|Berkshire+Swash" rel="stylesheet">
-
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto|Berkshire+Swash|" rel="stylesheet">
 </head>
-
 <body>
-    <div class="overlay" id="nav">
-        <div class="overlay-wrapper">
-                <div class="overlay-navbar">
-                        <a href="#" class="closeBtn" onclick="closeNav()">
-                            X
-                        </a>
-                    </div>
-                    <div class="overlay-content_Wrapper">
-                        <div class="overlay-content">
-                            <a href="#">
-                                Work
-                            </a>
-                            <a href="#">
-                                Contact
-                            </a>
-                        </div>
-                    </div>
-        </div>
-    </div>
-    <header>
-        <div class="nav-bar">
-            <div class="logo">
-                <span>Pv</span>
-            </div> 
-            <nav class="main-nav" id="index-nav">
-                <!-- <ul>
-                    <li><a id="work" href="">work</a></li>
-                    <li><a id="contact" href="">contact</a></li>
-                </ul> -->
-                <a href="#" class="openBtn" onclick="openNav()">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </a>
-            </nav>
-        </div>
-    </header>
-    <section id="heroSection">
-        <div class="container">
-                <div class="hero-section">
-                        <div class="hero-section_Wrapper">
-                            <div class="hero-section_Inner">
-                                <div class="hero-section_Title">
-                                    <h1>
-                                        <span>
-                                            Phongxai Vang.
-                                        </span>
-                                        <span>
-                                            Front-End Developer.
-                                        </span>
-                                    </h1>
-                                </div>
-                                <div class="hero-section_Description">
-                                    <p>
-                                        Passionate about technology and exploring the vast space of Front End and Design                                            
-                                    </p>
-                                </div>
-                                <!-- <button class="hero-section_Button">
-                                    <a href="">
-                                        WORK                                            
-                                    </a>
-                                </button>
-                                <button class="hero-section_Button" id="btn-contact">
-                                        <a href="">
-                                            CONTACT                                            
-                                        </a>
-                                </button> -->
-                            </div>
-                    </div>
-                </div>
-        </div>
-    </section>
-    <section id="workSection">
-            <div class="container flex">
-                    <div class="project-item">
-                            <div class="project-item_Wrapper">
-                                <div class="project-item_Inner">
-                                    <div class="project-item_FigureWrapper">
-                                        <a href="">
-                                            <figure class="project-item_Figure">
-                                                <img src="img/frogtownfarm.png" alt="">
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="project-item_DescriptionWrapper">
-                                        <a href="">
-                                            <div class="project-item_description">
-                                                <div class="project-item_Title">
-                                                    <h2>
-                                                <span class="project-item_Titledesc">
-                                                    FROGTOWN FARM
-                                                </span>  
-                                              </h2>
-                                                </div>
-                                                <hr class="zig">
-                                                <div class="project-item_Work">
-                                                    <span class="project-item_Workdesc">
-                                                Front-End Development
-                                            </span>
-                                                </div>
-                                                <div class="project-item_Work" id="project-item_work2">
-                                                    <span class="project-item_Workdesc">
-                                                  Agency Work
-                                              </span>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    <div class="project-item">
-                        <div class="project-item_Wrapper">
-                            <div class="project-item_Inner">
-                                <div class="project-item_FigureWrapper">
-                                    <a href="">
-                                        <figure class="project-item_Figure">
-                                            <img src="img/glorybound.png" alt="">
-                                        </figure>
-                                    </a>
-                                </div>
-                                <div class="project-item_DescriptionWrapper">
-                                    <a href="">
-                                        <div class="project-item_description">
-                                            <div class="project-item_Title">
-                                                <h2>
-                                            <span class="project-item_Titledesc">
-                                                GLORYBOUND
-                                            </span>  
-                                          </h2>
-                                            </div>
-                                            <hr class="zig">
-                                            <div class="project-item_Work">
-                                                <span class="project-item_Workdesc">
-                                                    Design & Development
-                                                </span>
-                                            </div>
-                                            <div class="project-item_Work"  id="project-item_work2">
-                                                <span class="project-item_Workdesc">
-                                                    Agency Work
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-item">
-                        <div class="project-item_Wrapper">
-                            <div class="project-item_Inner">
-                                <div class="project-item_FigureWrapper">
-                                    <a href="">
-                                        <figure class="project-item_Figure">
-                                            <img src="img/umcpi.png" alt="">
-                                        </figure>
-                                    </a>
-                                </div>
-                                <div class="project-item_DescriptionWrapper">
-                                    <a href="">
-                                        <div class="project-item_description">
-                                            <div class="project-item_Title">
-                                                <h2>
-                                            <span class="project-item_Titledesc">
-                                                UMCPI
-                                            </span>  
-                                          </h2>
-                                            </div>
-                                            <hr class="zig">
-                                            <div class="project-item_Work">
-                                                <span class="project-item_Workdesc">
-                                            Design & Development
-                                        </span>
-                                            </div>
-                                            <div class="project-item_Work" id="project-item_work2">
-                                                <span class="project-item_Workdesc">
-                                              Agency Work
-                                          </span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-item">
-                        <div class="project-item_Wrapper">
-                            <div class="project-item_Inner">
-                                <div class="project-item_FigureWrapper">
-                                    <a href="">
-                                        <figure class="project-item_Figure">
-                                            <img src="img/umcpi.png" alt="">
-                                        </figure>
-                                    </a>
-                                </div>
-                                <div class="project-item_DescriptionWrapper">
-                                    <a href="">
-                                        <div class="project-item_description">
-                                            <div class="project-item_Title">
-                                                <h2>
-                                            <span class="project-item_Titledesc">
-                                                UMCPI
-                                            </span>  
-                                          </h2>
-                                            </div>
-                                            <hr class="zig">
-                                            <div class="project-item_Work">
-                                                <span class="project-item_Workdesc">
-                                            Design & Development
-                                        </span>
-                                            </div>
-                                            <div class="project-item_Work" id="project-item_work2">
-                                                <span class="project-item_Workdesc">
-                                              Agency Work
-                                          </span>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-    </section>
-    <!-- <div class="waves">
-        <img src="img/wave.svg" alt="">
-    </div> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="js/script.js"></script>
+	<div class="overlay">
+
+	</div>
+	<header id="index-header">
+		<div class="nav-bar" id="index-nav-bar">
+			<div class="logo-wrapper">
+				<a href="index.html">
+					<div class="logo" id="index-logo">
+						Pv
+					</div>
+				</a>
+			</div>
+			<div class="nav-menu-wrapper">
+				<div class="nav-menu" id="index-nav-menu">
+					<a href="#" id="openNav">
+						<span></span>
+						<span></span>
+						<span></span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</header>
+	<div class="main-content" id="index-main-content">
+		<section class="section" id="heroSection">
+			<div class="hero-section">
+				<div class="hero-section-inner">
+					<div class="hero-section-title">
+						<h1>
+							<span class="span-block">
+								Design<span id="span-period">.</span>
+							</span>
+							<span class="span-block">
+								And
+							</span>
+							<span class="span-block">
+								Develop<span id="span-period">.</span>
+							</span>
+						</h1>
+						<h2>
+							<span>
+								Passionate about technology and exploring the vast space of Front End and Design<span id="span-period">.</span>
+							</span>
+						</h2>			
+					</div>
+					<div class="video-overlay">
+						<div class="video-overlay-line"></div>
+					</div>
+					<div class="hero-section-video">
+						<video preload="auto" autoplay="true" loop>
+								<source src="video/Office_Perks.mp4" type="video/mp4">
+								<source src="video/Office_Perks.webm" type="video/webm">		
+						</video>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="section" id="workSection">
+			<div class="work-section">
+				<div class="work-section-inner clearfix">
+					<div class="work-section-item">
+						<div class="work-section-item-inner">
+							<div class="project-item_FigureWrapper">
+								<a href="">
+									<figure class="project-item_Figure">
+										<img src="img/umcpi.png" alt="">
+									</figure>
+								</a>
+							</div>
+							<div class="project-item_DescriptionWrapper">
+								<a href="">
+									<div class="project-item_description">
+										<div class="project-item_Title">
+											<h2>
+										<span class="project-item_Titledesc">
+											FROGTOWN FARM
+										</span>  
+									  </h2>
+										</div>
+										<hr class="zig">
+										<div class="project-item_Work">
+											<span class="project-item_Workdesc">
+										Front-End Development
+									</span>
+										</div>
+										<div class="project-item_Work" id="project-item_work2">
+											<span class="project-item_Workdesc">
+										  Agency Work
+									  </span>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="work-section-item small">
+						<div class="work-section-item-inner">
+							<div class="project-item_FigureWrapper">
+								<a href="">
+									<figure class="project-item_Figure">
+										<img src="img/umcpi.png" alt="">
+									</figure>
+								</a>
+							</div>
+							<div class="project-item_DescriptionWrapper">
+								<a href="">
+									<div class="project-item_description">
+										<div class="project-item_Title">
+											<h2>
+										<span class="project-item_Titledesc">
+											FROGTOWN FARM
+										</span>  
+									  </h2>
+										</div>
+										<hr class="zig">
+										<div class="project-item_Work">
+											<span class="project-item_Workdesc">
+										Front-End Development
+									</span>
+										</div>
+										<div class="project-item_Work" id="project-item_work2">
+											<span class="project-item_Workdesc">
+										  Agency Work
+									  </span>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="work-section-item small">
+						<div class="work-section-item-inner">
+							<div class="project-item_FigureWrapper">
+								<a href="">
+									<figure class="project-item_Figure">
+										<img src="img/glorybound.png" alt="">
+									</figure>
+								</a>
+							</div>
+							<div class="project-item_DescriptionWrapper">
+								<a href="">
+									<div class="project-item_description">
+										<div class="project-item_Title">
+											<h2>
+										<span class="project-item_Titledesc">
+											FROGTOWN FARM
+										</span>  
+									  </h2>
+										</div>
+										<hr class="zig">
+										<div class="project-item_Work">
+											<span class="project-item_Workdesc">
+										Front-End Development
+									</span>
+										</div>
+										<div class="project-item_Work" id="project-item_work2">
+											<span class="project-item_Workdesc">
+										  Agency Work
+									  </span>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="work-section-item">
+						<div class="work-section-item-inner">
+							<div class="project-item_FigureWrapper">
+								<a href="">
+									<figure class="project-item_Figure">
+										<img src="img/frogtownfarm.png" alt="">
+									</figure>
+								</a>
+							</div>
+							<div class="project-item_DescriptionWrapper">
+								<a href="">
+									<div class="project-item_description">
+										<div class="project-item_Title">
+											<h2>
+										<span class="project-item_Titledesc">
+											FROGTOWN FARM
+										</span>  
+									  </h2>
+										</div>
+										<hr class="zig">
+										<div class="project-item_Work">
+											<span class="project-item_Workdesc">
+										Front-End Development
+									</span>
+										</div>
+										<div class="project-item_Work" id="project-item_work2">
+											<span class="project-item_Workdesc">
+										  Agency Work
+									  </span>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
