--- a/redesign/index.html
+++ b/redesign/index.html
@@ -10,6 +10,8 @@
 	<link rel="icon" href="img/favicon.jpg">
 
 	<!-- CSS Stylesheets -->
+	<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 
@@ -40,7 +42,7 @@
 			</div>
 		</div>
 	</header>
-	<div class="main-content" id="index-main-content">
+	<div class="main-content animated fadeIn" id="index-main-content">
 		<section class="section" id="heroSection">
 			<div class="hero-section">
 				<div class="hero-section-inner">
@@ -77,7 +79,42 @@
 		<section class="section" id="workSection">
 			<div class="work-section">
 				<div class="work-section-inner clearfix">
-					<div class="work-section-item">
+					<div class="work-section-item right">
+						<div class="work-section-item-inner">
+							<div class="project-item_FigureWrapper">
+								<a href="vanguard.html">
+									<figure class="project-item_Figure">
+										<img src="img/umcpi.png" alt="">
+									</figure>
+								</a>
+							</div>
+							<div class="project-item_DescriptionWrapper">
+								<a href="vanguard.html">
+									<div class="project-item_description">
+										<div class="project-item_Title">
+											<h2>
+										<span class="project-item_Titledesc">
+											FROGTOWN FARM
+										</span>  
+									  </h2>
+										</div>
+										<hr class="zig">
+										<div class="project-item_Work">
+											<span class="project-item_Workdesc">
+										Front-End Development
+									</span>
+										</div>
+										<div class="project-item_Work" id="project-item_work2">
+											<span class="project-item_Workdesc">
+										  Agency Work
+									  </span>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="work-section-item left small">
 						<div class="work-section-item-inner">
 							<div class="project-item_FigureWrapper">
 								<a href="">
@@ -112,42 +149,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="work-section-item small">
-						<div class="work-section-item-inner">
-							<div class="project-item_FigureWrapper">
-								<a href="">
-									<figure class="project-item_Figure">
-										<img src="img/umcpi.png" alt="">
-									</figure>
-								</a>
-							</div>
-							<div class="project-item_DescriptionWrapper">
-								<a href="">
-									<div class="project-item_description">
-										<div class="project-item_Title">
-											<h2>
-										<span class="project-item_Titledesc">
-											FROGTOWN FARM
-										</span>  
-									  </h2>
-										</div>
-										<hr class="zig">
-										<div class="project-item_Work">
-											<span class="project-item_Workdesc">
-										Front-End Development
-									</span>
-										</div>
-										<div class="project-item_Work" id="project-item_work2">
-											<span class="project-item_Workdesc">
-										  Agency Work
-									  </span>
-										</div>
-									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="work-section-item small">
+					<div class="work-section-item right small">
 						<div class="work-section-item-inner">
 							<div class="project-item_FigureWrapper">
 								<a href="">
@@ -182,7 +184,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="work-section-item">
+					<div class="work-section-item left">
 						<div class="work-section-item-inner">
 							<div class="project-item_FigureWrapper">
 								<a href="">
