--- a/redesign/vanguard.html
+++ b/redesign/vanguard.html
@@ -9,6 +9,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- CSS Stylesheets -->
+	<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/app.css">	
@@ -40,7 +42,7 @@
 			</div>
 		</div>
 	</header>
-	<div class="main-content">
+	<div class="main-content animated fadeIn">
 		<section class="item-description">
 			<div class="title">
 				<h1>
