--- a/redesign/vanguard.html
+++ b/redesign/vanguard.html
@@ -19,8 +19,24 @@
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto|Berkshire+Swash|" rel="stylesheet">
 </head>
 <body>
-	<div class="overlay">
-
+	<div class="overlay" id="nav">
+		<div class="overlay-wrapper">
+				<div class="overlay-navbar">
+						<a href="#" class="closeBtn" onclick="closeNav()">
+							&#x2716
+						</a>
+					</div>
+					<div class="overlay-content_Wrapper">
+						<div class="overlay-content">
+							<a href="#" id="work">
+								work
+							</a>
+							<a href="#" id="contact">
+								contact
+							</a>
+						</div>
+					</div>
+		</div>
 	</div>
 	<header>
 		<div class="nav-bar">
@@ -33,10 +49,8 @@
 			</div>
 			<div class="nav-menu-wrapper">
 				<div class="nav-menu">
-					<a href="#" id="openNav" onclick="openNav()">
-						<span></span>
-						<span></span>
-						<span></span>
+					<a href="index.html">
+						&#10229 <strong>Back</strong> 
 					</a>
 				</div>
 			</div>
