--- a/redesign/index.html
+++ b/redesign/index.html
@@ -66,15 +66,13 @@
 					<div class="hero-section-title">
 						<h1>
 							<span class="span-block">
-								Design
-								<span id="span-period">.</span>
+								Design<span id="span-period">.</span>
 							</span>
 							<span class="span-block">
 								And
 							</span>
 							<span class="span-block">
-								Develop
-								<span id="span-period">.</span>
+								Develop<span id="span-period">.</span>
 							</span>
 						</h1>
 						<h2>
@@ -103,7 +101,7 @@
 							<div class="project-item_FigureWrapper">
 								<a href="vanguard.html">
 									<figure class="project-item_Figure">
-										<img src="img/umcpi.png" alt="">
+										<img src="img/iPhone-6-Isometric-view-Mockup.png" alt="">
 									</figure>
 								</a>
 							</div>
@@ -113,84 +111,14 @@
 										<div class="project-item_Title">
 											<h2>
 												<span class="project-item_Titledesc">
-													FROGTOWN FARM
+													VANGUARD TECH
 												</span>
 											</h2>
 										</div>
 										<hr class="zig">
 										<div class="project-item_Work">
 											<span class="project-item_Workdesc">
-												Front-End Development
-											</span>
-										</div>
-										<div class="project-item_Work" id="project-item_work2">
-											<span class="project-item_Workdesc">
-												Agency Work
-											</span>
-										</div>
-									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="work-section-item left small">
-						<div class="work-section-item-inner">
-							<div class="project-item_FigureWrapper">
-								<a href="">
-									<figure class="project-item_Figure">
-										<img src="img/umcpi.png" alt="">
-									</figure>
-								</a>
-							</div>
-							<div class="project-item_DescriptionWrapper">
-								<a href="">
-									<div class="project-item_description">
-										<div class="project-item_Title">
-											<h2>
-												<span class="project-item_Titledesc">
-													FROGTOWN FARM
-												</span>
-											</h2>
-										</div>
-										<hr class="zig">
-										<div class="project-item_Work">
-											<span class="project-item_Workdesc">
-												Front-End Development
-											</span>
-										</div>
-										<div class="project-item_Work" id="project-item_work2">
-											<span class="project-item_Workdesc">
-												Agency Work
-											</span>
-										</div>
-									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="work-section-item right small">
-						<div class="work-section-item-inner">
-							<div class="project-item_FigureWrapper">
-								<a href="">
-									<figure class="project-item_Figure">
-										<img src="img/glorybound.png" alt="">
-									</figure>
-								</a>
-							</div>
-							<div class="project-item_DescriptionWrapper">
-								<a href="">
-									<div class="project-item_description">
-										<div class="project-item_Title">
-											<h2>
-												<span class="project-item_Titledesc">
-													FROGTOWN FARM
-												</span>
-											</h2>
-										</div>
-										<hr class="zig">
-										<div class="project-item_Work">
-											<span class="project-item_Workdesc">
-												Front-End Development
+												App Design / Prototype
 											</span>
 										</div>
 										<div class="project-item_Work" id="project-item_work2">
@@ -206,14 +134,84 @@
 					<div class="work-section-item left">
 						<div class="work-section-item-inner">
 							<div class="project-item_FigureWrapper">
-								<a href="">
+								<a href="umcpi">
+									<figure class="project-item_Figure">
+										<img src="img/umcpi.png" alt="">
+									</figure>
+								</a>
+							</div>
+							<div class="project-item_DescriptionWrapper">
+								<a href="umcpi">
+									<div class="project-item_description">
+										<div class="project-item_Title">
+											<h2>
+												<span class="project-item_Titledesc">
+													UMCPI
+												</span>
+											</h2>
+										</div>
+										<hr class="zig">
+										<div class="project-item_Work">
+											<span class="project-item_Workdesc">
+												Front-End Development / Design
+											</span>
+										</div>
+										<div class="project-item_Work" id="project-item_work2">
+											<span class="project-item_Workdesc">
+												Agency Work
+											</span>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="work-section-item right small">
+						<div class="work-section-item-inner">
+							<div class="project-item_FigureWrapper">
+								<a href="glorybound.html">
+									<figure class="project-item_Figure">
+										<img src="img/glorybound.png" alt="">
+									</figure>
+								</a>
+							</div>
+							<div class="project-item_DescriptionWrapper">
+								<a href="glorybound.html">
+									<div class="project-item_description">
+										<div class="project-item_Title">
+											<h2>
+												<span class="project-item_Titledesc">
+													GLORYBOUND MN
+												</span>
+											</h2>
+										</div>
+										<hr class="zig">
+										<div class="project-item_Work">
+											<span class="project-item_Workdesc">
+												Front-End Development / Design
+											</span>
+										</div>
+										<div class="project-item_Work" id="project-item_work2">
+											<span class="project-item_Workdesc">
+												Agency Work
+											</span>
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="work-section-item left">
+						<div class="work-section-item-inner">
+							<div class="project-item_FigureWrapper">
+								<a href="frogtown.html">
 									<figure class="project-item_Figure">
 										<img src="img/frogtownfarm.png" alt="">
 									</figure>
 								</a>
 							</div>
 							<div class="project-item_DescriptionWrapper">
-								<a href="">
+								<a href="frogtown.html">
 									<div class="project-item_description">
 										<div class="project-item_Title">
 											<h2>
@@ -241,10 +239,18 @@
 				</div>
 			</div>
 		</section>
+		<section id="#contactSection">
+			<div class="contact-section">
+				<div class="contact-section-inner">
+
+				</div>
+			</div>
+		</section>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="js/script.js"></script>
+
 </body>
 
 </html>
