--- a/redesign/Glorybound.html
+++ b/redesign/Glorybound.html
@@ -61,7 +61,7 @@
 		<section class="item-description">
 			<div class="title">
 				<h1>
-					Vanguard Tech
+					Glorybound MN
 				</h1>
 			</div>
 			<div class="item-description-info">
@@ -70,48 +70,23 @@
 						Client
 					</span>
 					<p>
-						Vanguard Tech
+						Glorybound MN
 					</p>
 				</div>
 				<div class="item-description-info-2">
 					<p>
-						I was asked to help the Junior Acheivement Program at Edison High School create a design for their app Vanguard tech. The
-						app offers a platform for students to earn rewards with the goal of increasing student engagement and motivation.
+                        Website redesign for Glorybound, a non profit family restoration center that helps families of men and women who are struggling with alcohol and substance abuse based in Minneapolis, MN. Their previous website was outdated, so I was asked to redesign and develop their new site.
 					</p>
 					<p>
-						Working with students from Edison, I came up with a sleek and minimal interface with emphasis on ease of use for both student
-						and teacher. I also created a
-						<a href="https://phongxai2.github.io/prototype" id="item-description-a">prototype</a> website for the students to test and present.
+                        The newly revamped website is clean and minimal providing a better experience for users and a color scheme that would better portray Glorybound's organization. Powered by WordPress and built with custom HTML, CSS, and JQUERY.
 					</p>
 				</div>
 			</div>
 		</section>
 		<section class="item-img">
 			<div class="img-container">
-				<img src="img/log-in.png" alt="">
+				<img src="img/glorybound-full.png" alt="">
 			</div>
-			<div class="video-container clearfix">
-				<div class="video-container-inner">
-					<h2>
-						<span>
-							<span>Simple</span>
-							<span>and</span>
-							<span>Easy to use</span>   
-						</span>
-					</h2>
-					<p>
-						Manage your points and use it to purchase goods from the school.
-					</p>
-				</div>
-				<div class="video-container-inner">
-					<video preload="auto" autoplay="true" loop>
-						<source src="video/vanguardtech.mp4" type="video/mp4">
-					</video>
-				</div>
-			</div>
-			<div class="img-container">
-					<img src="img/screens.png" alt="">
-				</div>
 		</section>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
