--- a/redesign/frogtown.html
+++ b/redesign/frogtown.html
@@ -61,7 +61,7 @@
 		<section class="item-description">
 			<div class="title">
 				<h1>
-					Vanguard Tech
+					Frogtown Farm
 				</h1>
 			</div>
 			<div class="item-description-info">
@@ -75,43 +75,18 @@
 				</div>
 				<div class="item-description-info-2">
 					<p>
-						I was asked to help the Junior Acheivement Program at Edison High School create a design for their app Vanguard tech. The
-						app offers a platform for students to earn rewards with the goal of increasing student engagement and motivation.
+						Frogtown Farm, an urban farm located in St. Paul Minneapolis, approached us to make a new website for them. My role was to do cutomize the frontend of the squarespace theme.
 					</p>
 					<p>
-						Working with students from Edison, I came up with a sleek and minimal interface with emphasis on ease of use for both student
-						and teacher. I also created a
-						<a href="https://phongxai2.github.io/prototype" id="item-description-a">prototype</a> website for the students to test and present.
+						The newly finished site is simple and easy to use. Using CSS Media Queries, the website structure is fully responsive, compatible on a large variety of platforms and increasing the customer reach.
 					</p>
 				</div>
 			</div>
 		</section>
 		<section class="item-img">
 			<div class="img-container">
-				<img src="img/log-in.png" alt="">
+				<img src="img/frogtownfarm-full.png" alt="">
 			</div>
-			<div class="video-container clearfix">
-				<div class="video-container-inner">
-					<h2>
-						<span>
-							<span>Simple</span>
-							<span>and</span>
-							<span>Easy to use</span>   
-						</span>
-					</h2>
-					<p>
-						Manage your points and use it to purchase goods from the school.
-					</p>
-				</div>
-				<div class="video-container-inner">
-					<video preload="auto" autoplay="true" loop>
-						<source src="video/vanguardtech.mp4" type="video/mp4">
-					</video>
-				</div>
-			</div>
-			<div class="img-container">
-					<img src="img/screens.png" alt="">
-				</div>
 		</section>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
