--- a/redesign/umcpi/umcpi.html
+++ b/redesign/umcpi/umcpi.html
@@ -10,9 +10,9 @@
 
 	<!-- CSS Stylesheets -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/app.css">
+	<link rel="stylesheet" href="../css/normalize.css">
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/app.css">
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto|Berkshire+Swash|" rel="stylesheet">
@@ -41,7 +41,7 @@
 	<header>
 		<div class="nav-bar">
 			<div class="logo-wrapper">
-				<a href="index.html">
+				<a href="../index.html">
 					<div class="logo">
 						Pv
 					</div>
@@ -49,7 +49,7 @@
 			</div>
 			<div class="nav-menu-wrapper">
 				<div class="nav-menu">
-					<a href="index.html">
+					<a href="../index.html">
 						&#10229
 						<strong>Return</strong>
 					</a>
@@ -61,7 +61,7 @@
 		<section class="item-description">
 			<div class="title">
 				<h1>
-					Vanguard Tech
+					UMCPI
 				</h1>
 			</div>
 			<div class="item-description-info">
@@ -70,48 +70,23 @@
 						Client
 					</span>
 					<p>
-						Vanguard Tech
+						UMCPI
 					</p>
 				</div>
 				<div class="item-description-info-2">
 					<p>
-						I was asked to help the Junior Acheivement Program at Edison High School create a design for their app Vanguard tech. The
-						app offers a platform for students to earn rewards with the goal of increasing student engagement and motivation.
+                        UMCPI, a non profit that offers training and consulting to public safety agencies, needed a website redesign because their old site was outdated.
 					</p>
 					<p>
-						Working with students from Edison, I came up with a sleek and minimal interface with emphasis on ease of use for both student
-						and teacher. I also created a
-						<a href="https://phongxai2.github.io/prototype" id="item-description-a">prototype</a> website for the students to test and present.
+                        The new website was built with mobile first in mind. Using CSS media queries, the website is fully responsive and looks great both on desktop and mobile. The website was built with wordpress for ease of updates without a developer.
 					</p>
 				</div>
 			</div>
 		</section>
 		<section class="item-img">
 			<div class="img-container">
-				<img src="img/log-in.png" alt="">
+				<img src="../img/umcpi1.png" alt="">
 			</div>
-			<div class="video-container clearfix">
-				<div class="video-container-inner">
-					<h2>
-						<span>
-							<span>Simple</span>
-							<span>and</span>
-							<span>Easy to use</span>   
-						</span>
-					</h2>
-					<p>
-						Manage your points and use it to purchase goods from the school.
-					</p>
-				</div>
-				<div class="video-container-inner">
-					<video preload="auto" autoplay="true" loop>
-						<source src="video/vanguardtech.mp4" type="video/mp4">
-					</video>
-				</div>
-			</div>
-			<div class="img-container">
-					<img src="img/screens.png" alt="">
-				</div>
 		</section>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
