--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 		<section class="section" id="contactSection">
 			<div class="contact-section">
 				<div class="contact-section-inner">
-					hello
+					<!-- hello -->
 				</div>
 			</div>
 		</section>
