--- a/vanguard.html
+++ b/vanguard.html
@@ -104,7 +104,7 @@
 					</p>
 				</div>
 				<div class="video-container-inner">
-					<video preload="auto" autoplay="true" loop>
+					<video preload="auto" autoplay loop>
 						<source src="video/vanguardtech.mp4" type="video/mp4">
 					</video>
 				</div>
