--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<div class="video-overlay-line"></div>
 					</div>
 					<div class="hero-section-video">
-						<video preload="auto" autoplay="true" loop>
+						<video preload="auto" autoplay="true" loop muted>
 							<source src="video/Office_Perks.webm" type="video/webm">
 							<source src="video/Office_Perks.mp4" type="video/mp4">
 						</video>
