--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 					<div class="hero-section-title">
 						<h1>
 							<span class="span-block">
-								Design<span id="span-period">.</span>
+								Design<span class="span-period">.</span>
 							</span>
 							<span class="span-block">
 								And
 							</span>
 							<span class="span-block">
-								Develop<span id="span-period">.</span>
+								Develop<span class="span-period">.</span>
 							</span>
 						</h1>
 						<h2>
