Minor Html Edits

--- a/vanguard.html
+++ b/vanguard.html
@@ -50,7 +50,7 @@
 			<div class="nav-menu-wrapper">
 				<div class="nav-menu">
 					<a href="index.html">
-						&#10229
+						&#10229;
 						<strong>Return</strong>
 					</a>
 				</div>
@@ -67,10 +67,10 @@
 			<div class="item-description-info">
 				<div class="item-description-info-1">
 					<span>
-						Client
+						Role
 					</span>
 					<p>
-						Vanguard Tech
+						App Design / Prototype
 					</p>
 				</div>
 				<div class="item-description-info-2">
