--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						</h1>
 						<h2>
 							<span>
-								Passionate about technology and exploring the vast space of Front End and Design<span id="span-period">.</span>
+								Passionate about technology and exploring the vast space of Front End and Design<span class="span-period">.</span>
 							</span>
 						</h2>
 					</div>
